--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -16,7 +16,7 @@
 <idea-plugin>
     <id>com.nilsenlabs.flavormatrix</id>
     <name>Build Variant Matrix Selector</name>
-    <vendor url="https://www.github.com/nilzor">Frode Nilsen</vendor>
+    <vendor url="https://github.com/Nilzor/flavor-matrix">Frode Nilsen</vendor>
     <idea-version since-build="201"/>
 
     <description><![CDATA[
