--- a/build.gradle
+++ b/build.gradle
@@ -11,12 +11,12 @@ plugins {
 }
 
 group 'com.nilsenlabs.flavormatrix'
-version '0.5.5'
+version '0.5.6'
 
 patchPluginXml {
     changeNotes """
     <ul>
-      <li>0.5.3 Beta version of the Build Variant Matrix Selector plugin</li>
+      <li>0.5.6 Improved release notes</li>
     </ul>
     """
 }
@@ -30,8 +30,8 @@ intellij {
 
 runIde {
     // Absolute path to installed target 4.1 Android Studio to use as IDE Development Instance
-    ideDirectory 'c:/Program Files/Android/Android Studio 4.1 RC3'
-    //ideDirectory 'C:/Program Files/Android/Android Studio'
+    //ideDirectory 'c:/Program Files/Android/Android Studio 4.1 RC3'
+    ideDirectory 'C:/Program Files/Android/Android Studio'
 }
 
 repositories {
