--- a/build.gradle
+++ b/build.gradle
@@ -6,32 +6,44 @@ buildscript {
 }
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.3.72'
-    id 'org.jetbrains.intellij' version '0.4.21'
+    id 'org.jetbrains.kotlin.jvm' version '1.5.10'
+    id 'org.jetbrains.intellij' version '1.0'
+
+    //id 'org.jetbrains.kotlin.jvm' version '1.3.72'
+    //id 'org.jetbrains.intellij' version '0.4.21'
 }
 
 group 'com.nilsenlabs.flavormatrix'
 version '0.5.6'
 
+intellij {
+    version = '202.7660.26'  // IntelliJ IDEA version used in Android Studio 4.2.1
+    type = 'IC'                // Community edition
+    plugins = ['android']
+    //updateSinceUntilBuild false
+}
+
 patchPluginXml {
-    changeNotes """
+    changeNotes = """
     <ul>
       <li>0.5.6 Improved release notes</li>
     </ul>
     """
 }
-
-intellij {
-    version '193.6911.18'  //  IntelliJ IDEA version used in Android Studio 4.0.1
-    type 'IC'              // Community edition
-    plugins 'android'
-    updateSinceUntilBuild false
-}
-
+/*
+Android Studio 4.2.1
+Build #AI-202.7660.26.42.7351085, built on May 10, 2021
+*/
 runIde {
     // Absolute path to installed target 4.1 Android Studio to use as IDE Development Instance
     //ideDirectory 'c:/Program Files/Android/Android Studio 4.1 RC3'
-    ideDirectory 'C:/Program Files/Android/Android Studio'
+    //ideDirectory 'C:/Program Files/Android/Android Studio'
+
+   // new
+   // def dir = org.gradle.api.file.Directory.dir('C:/Programfiler/android/Android Studio')
+    //ideDir.set(dir) // Work computer)
+    def dir = project.getLayout().getProjectDirectory().dir('C:/Programfiler/android/Android Studio')
+    ideDir.set(dir)
 }
 
 repositories {
@@ -45,6 +57,6 @@ dependencies {
     testCompile "org.mockito:mockito-core:2.+"
 }
 
-publishPlugin {
-    token project.properties['jetbrains.publish.token']
-}
+//publishPlugin {
+ //   token project.properties['jetbrains.publish.token']
+//}
