--- a/build.gradle
+++ b/build.gradle
@@ -7,12 +7,15 @@ buildscript {
 }
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '1.8.0'
-    id 'org.jetbrains.intellij' version '1.0'
+    id 'org.jetbrains.kotlin.jvm' version '1.8.20'
+    id 'org.jetbrains.intellij' version '1.13.3'
 }
 
 group 'com.nilsenlabs.flavormatrix'
-version '1.1.0'
+version '1.2.0'
+
+Properties properties = new Properties()
+properties.load(project.rootProject.file("local.properties").newDataInputStream())
 
 
 // Any developer must change this to his/her installation folder
@@ -23,11 +26,16 @@ version '1.1.0'
 //  plugins\properties\lib\platform-images.jar
 //  plugin\sproperties\lib\properties.jar
 //  plugins\smali\lib\smali.jar
-def localStudioPath = 'C:/coding/android-studio-2022.1.1.19'
-//def localStudioPath = 'C:/Programfiler/android/Android Studio'
+def defaultLocalStudioPath = 'C:/coding/android-studio-2022.1.1.19'
+//def defaultLocalStudioPath = 'C:/Programfiler/android/Android Studio'
 
-// Below: Electric Eel patch 1 . ALWAYS UPDATE PLUGIN.XML AS WELL
-def targetIdeVersion = "221.6008.13"
+// Specify the path in your local.properties file as
+// localStudioPath=your/path/to/androidstudio
+// Also see https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#intellij-extension-localpath
+def localStudioPath = properties.get("localStudioPath") ?: defaultLocalStudioPath
+
+// Below: Android Studio Giraffe | 2022.3.1 Beta 1 . ALWAYS UPDATE PLUGIN.XML AS WELL
+def targetIdeVersion = "223.8617.56"
 
 // Build #IC-213.6777.52, built on January 28, 2022
 
@@ -49,6 +57,7 @@ intellij {
 patchPluginXml {
     changeNotes = """
     <ul>
+      <li>1.2.0 Support for Android Studio Giraffe</li>
       <li>1.1.0 Support for Android Studio Electric Eel</li>
       <li>1.0.0 Support for Android Studio Chipmunk (RC2+)</li>
       <li>0.7.0 Support for Android studio Arctic Fox 2020.3.1</li>
@@ -58,8 +67,8 @@ patchPluginXml {
 }
 
 runIde {
-    def dirObj = project.getLayout().getProjectDirectory().dir(localStudioPath)
-    ideDir.set(dirObj)
+    ideDir.set(file(localStudioPath))
+
 }
 
 instrumentCode {
@@ -75,7 +84,7 @@ repositories {
 
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
-    testCompile "org.mockito:mockito-core:2.+"
+    testImplementation "org.mockito:mockito-core:2.+"
 }
 
 //publishPlugin {
