--- a/build.gradle
+++ b/build.gradle
@@ -12,7 +12,7 @@ plugins {
 }
 
 group 'com.nilsenlabs.flavormatrix'
-version '1.2.0'
+version '1.3.0'
 
 Properties properties = new Properties()
 properties.load(project.rootProject.file("local.properties").newDataInputStream())
@@ -24,16 +24,15 @@ properties.load(project.rootProject.file("local.properties").newDataInputStream(
 //  plugins\properties\lib\platform-images.jar
 //  plugins\properties\lib\properties.jar
 //  plugins\smali\lib\smali.jar
-def defaultLocalStudioPath = 'd:/coding/android-studio-2022.3.1.14-windows'
+def defaultLocalStudioPath = 'd:/coding/android-studio-ladybug-canary1'
 
 // Specify the path in your local.properties file as
 // localStudioPath=your/path/to/androidstudio
 // Also see https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#intellij-extension-localpath
 def localStudioPath = properties.get("localStudioPath") ?: defaultLocalStudioPath
 
-// Below: From Giraffe Beta 1
-// Also tested on Hedgehog Canary 4, 231.7864.76
-def targetIdeVersion = "223.8836.35"
+// Below: Ladybug 2024.1.3 Canary 1
+def targetIdeVersion = "241.18034.62"
 
 intellij {
     // Uncomment the two lines below and remove "localPath" if you want to build for a different version than the one locally installed
@@ -51,11 +50,11 @@ intellij {
 patchPluginXml {
     changeNotes = """
     <ul>
+      <li>1.3.0 Support for Android Studio Ladybug</li>
       <li>1.2.0 Support for Android Studio Giraffe and Hedgehog</li>
       <li>1.1.0 Support for Android Studio Electric Eel</li>
       <li>1.0.0 Support for Android Studio Chipmunk (RC2+)</li>
       <li>0.7.0 Support for Android studio Arctic Fox 2020.3.1</li>
-      <li>0.6.0 Support for Android 4.2</li>
     </ul>
     """
 }
