Swap non-existing GradleProjectStructureActions group for BuildMenu

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -44,7 +44,7 @@ This is an open source project licensed under the Apache License v2.0.]]></descr
         <action id="SelectBuildVariantMatrixAction"
                 class="com.nilsenlabs.flavormatrix.actions.SelectBuildVariantMatrixAction"
                 text="Select Build Variant by Matrix">
-            <add-to-group group-id="GradleProjectStructureActions"
+            <add-to-group group-id="BuildMenu"
                           anchor="after"
                           relative-to-action="SelectBuildVariant" />
             <keyboard-shortcut keymap="$default" first-keystroke="ctrl shift x"/>
