--- a/build.gradle
+++ b/build.gradle
@@ -1,18 +1,17 @@
 buildscript {
     repositories {
         mavenCentral()
-        jcenter()
         maven { url 'https://www.jetbrains.com/intellij-repository/releases' }
     }
 }
 
 plugins {
     id 'org.jetbrains.kotlin.jvm' version '2.0.0'
-    id 'org.jetbrains.intellij' version '1.13.3'
+    id 'org.jetbrains.intellij.platform' version '2.2.1'
 }
 
 group 'com.nilsenlabs.flavormatrix'
-version '1.4.0'
+version '1.4.2'
 
 Properties properties = new Properties()
 properties.load(project.rootProject.file("local.properties").newDataInputStream())
@@ -31,26 +30,15 @@ def defaultLocalStudioPath = 'd:/coding/android-studio-meerkat'
 // Also see https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#intellij-extension-localpath
 def localStudioPath = properties.get("localStudioPath") ?: defaultLocalStudioPath
 
-// Below: Meerkat 2024.3.1 Canary 3. Remember to update plugin.xml
-def targetIdeVersion = "243.21565.193"
+// Below: Meerkat 2024.3.1 Canary 9. Remember to update plugin.xml
+def targetIdeVersion = "243.22562.218"
 
-intellij {
-    // Uncomment the two lines below and remove "localPath" if you want to build for a different version than the one locally installed
-    // version = targetIdeVersion
-    // type = 'IC'                // Community edition
-
-    plugins = ['android']
-    localPath = localStudioPath
-
-    // since-build and until-build is configured in plugin.xml.
-    // Update whenever rebuilt for later IDEA version.
-    updateSinceUntilBuild = false
-}
 
 patchPluginXml {
     changeNotes = """
     <ul>
-      <li>1.4.0 Support for Android Studio Meerkat (from Canary 3)</li>
+      <li>1.4.2 Publishing technicalities - no functionality change</li>
+      <li>1.4.0 Support for Android Studio Meerkat (from Canary 9)</li>
       <li>1.3.0 Support for Android Studio Ladybug</li>
       <li>1.2.0 Support for Android Studio Giraffe and Hedgehog</li>
       <li>1.1.0 Support for Android Studio Electric Eel</li>
@@ -60,23 +48,22 @@ patchPluginXml {
     """
 }
 
-runIde {
-    def dirObj = project.getLayout().getProjectDirectory().dir(localStudioPath).asFile
-    ideDir.set(dirObj)
-}
-
-instrumentCode {
-    compilerVersion = targetIdeVersion
-}
-
 repositories {
     mavenLocal()
     mavenCentral()
-    jcenter()
+    intellijPlatform {
+        defaultRepositories()
+    }
     maven { url 'https://www.jetbrains.com/intellij-repository/releases' }
 }
 
 dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation "org.mockito:mockito-core:2.+"
+    intellijPlatform {
+        local(localStudioPath)
+        //androidStudio("$targetIdeVersion") // If you want IntelliJ to download AS. instead of "local"
+        bundledPlugin('com.intellij.gradle')
+        plugin("org.jetbrains.android:$targetIdeVersion")
+    }
 }
