Update to 1.4.3 (AS Narwhal 2025.1.2)
• Updated version to 1.4.3 with Android Studio Narwhal 2025.1.2 support
• Added reflection-based Android model access layer (ReflectionAndroidModel.kt)
• Enhanced compatibility with GradleAndroidDependencyModelImpl for modern projects
• Fixed reflection access violations with isAccessible = true for all methods
• Improved multi-dimensional variant parsing for complex projects (abi, platform, sdk)
• Updated Kotlin to 2.1.0 and Gradle to 8.11.1
• Added comprehensive test suite for multi-dimensional scenarios
• Enhanced logging with production-appropriate levels
• Added development workflow script (rebuild.sh) for iterative testing
• Updated documentation with technical challenges and setup guide
• Removed direct Android model dependencies

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,30 @@ build
 .gradle
 out
 local.properties
+.intellijPlatform
+
+# Development and testing artifacts
+*.log
+log
+plugin.log
+bash_history
+
+# Android Studio cache and sandbox
+~/.cache/Google/AndroidStudio*/log/
+~/.cache/Google/AndroidStudio*/plugins/
+
+# Temporary files
+*.tmp
+*.temp
+
+# IDE-specific files
+*.swp
+*.swo
+*~
+
+# MacOS
+.DS_Store
+
+# Windows
+Thumbs.db
+desktop.ini
