--- a/build.gradle
+++ b/build.gradle
@@ -6,15 +6,17 @@ buildscript {
 }
 
 plugins {
-    id 'org.jetbrains.kotlin.jvm' version '2.0.0'
+    id 'org.jetbrains.kotlin.jvm' version '2.1.0'
     id 'org.jetbrains.intellij.platform' version '2.2.1'
 }
 
 group 'com.nilsenlabs.flavormatrix'
-version '1.4.2'
+version '1.4.3'
 
 Properties properties = new Properties()
-properties.load(project.rootProject.file("local.properties").newDataInputStream())
+if (project.rootProject.file("local.properties").exists()) {
+    properties.load(project.rootProject.file("local.properties").newDataInputStream())
+}
 
 // Any developer must change this to his/her installation folder
 // of Android Studio of the targetIdeVersion for which to build for
@@ -23,20 +25,21 @@ properties.load(project.rootProject.file("local.properties").newDataInputStream(
 //  plugins\properties\lib\platform-images.jar
 //  plugins\properties\lib\properties.jar
 //  plugins\smali\lib\smali.jar
-def defaultLocalStudioPath = 'd:/coding/android-studio-meerkat'
+def defaultLocalStudioPath = '/home/sam/android-studio'
 
 // Specify the path in your local.properties file as
 // localStudioPath=your/path/to/androidstudio
 // Also see https://plugins.jetbrains.com/docs/intellij/tools-gradle-intellij-plugin.html#intellij-extension-localpath
 def localStudioPath = properties.get("localStudioPath") ?: defaultLocalStudioPath
 
-// Below: Meerkat 2024.3.1 Canary 9. Remember to update plugin.xml
-def targetIdeVersion = "243.22562.218"
+// Below: Narwhal Feature Drop 2025.1.2 - Current version for compatibility
+def targetIdeVersion = "251.26094.121"
 
 
 patchPluginXml {
     changeNotes = """
     <ul>
+      <li>1.4.3 Support for Android Studio Narwhal (2025.1.2)</li>
       <li>1.4.2 Publishing technicalities - no functionality change</li>
       <li>1.4.0 Support for Android Studio Meerkat (from Canary 9)</li>
       <li>1.3.0 Support for Android Studio Ladybug</li>
@@ -61,9 +64,11 @@ dependencies {
     testImplementation group: 'junit', name: 'junit', version: '4.12'
     testImplementation "org.mockito:mockito-core:2.+"
     intellijPlatform {
-        local(localStudioPath)
-        //androidStudio("$targetIdeVersion") // If you want IntelliJ to download AS. instead of "local"
+        local(localStudioPath) // Use local Android Studio installation
+        //androidStudio("$targetIdeVersion") // Narwhal Feature Drop 2025.1.2
         bundledPlugin('com.intellij.gradle')
+        bundledPlugin('org.jetbrains.plugins.gradle')
         plugin("org.jetbrains.android:$targetIdeVersion")
+        jetbrainsRuntime()
     }
 }
