--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -1,5 +1,5 @@
 <!--
- Copyright 2020 Frode Nilsen of Nilsen Labs
+ Copyright 2024 Frode Nilsen of Nilsen Labs
 
    Licensed under the Apache License, Version 2.0 (the "License");
    you may not use this file except in compliance with the License.
@@ -17,7 +17,7 @@
     <id>com.nilsenlabs.flavormatrix</id>
     <name>Build Variant Matrix Selector</name>
     <vendor url="https://github.com/Nilzor/build-variant-matrix">Frode Nilsen</vendor>
-    <idea-version since-build="243.22562.218" />
+    <idea-version since-build="251.26094" until-build="252.*" />
     <description><![CDATA[<p>Select variant by selecting flavors in a matrix instead of through the drop down lists provdided by IntelliJ/Android Studio
 in the "Build Variants" view. In addition this plugin selects variants for all modules at the same time, even
 when there are multiple leaf modules. This results in a very fast and intuitive way of switching variants
